--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@ h1 {
   font-family: 'Righteous';
   text-align: center;
   color: white;
+  z-index: 1;
 }
 
 footer {
   margin-top: 600px;
   height: 100px;
   width: 100%;
-  background-color: black;
 }
 
 p.copyright {
@@ -212,4 +212,10 @@ p.copyright {
 #best:hover:before {
   left: calc(0% - 10px);
   transition: left 1s cubic-bezier(0.86, 0, 0.07, 1);
+}
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
